examples/errors/05_control_flow_errors.sop
// Soplang Control Flow Errors
// Demonstrates errors related to control flow statements

bandhig("Soplang Control Flow Error Examples")
bandhig("=================================")
bandhig("Uncomment examples one at a time to see specific errors")
bandhig()

// Example 1: Return outside function
// This will cause an error because return statements are only valid inside functions
// celi "Can't return outside a function"

// Example 2: Break outside loop
// This will cause an error because break statements are only valid inside loops
// jooji

// Example 3: Continue outside loop
// This will cause an error because continue statements are only valid inside loops
// soco

// Example 4: Invalid for loop parameters
// This will cause an error because for loop parameters must be numeric
// kuceli i min "start" ilaa "end" {
//     bandhig(i)
// }

// Example 5: Unreachable code after return
// This code will execute but the line after return won't be reached
// hawl testReturn() {
//     celi "Returned value"
//     bandhig("This line is unreachable")  // This warning would be detected in more advanced languages
// }
// testReturn()

// Example 6: Break in nested loop only breaks inner loop
// This demonstrates how break only affects the innermost loop (not an error but important behavior)
bandhig("Demonstrating break in nested loops:")
kuceli i min 1 ilaa 3 {
    bandhig("Outer loop: " + i)
    kuceli j min 1 ilaa 3 {
        bandhig("  Inner loop: " + j)
        haddii (j == 2) {
            bandhig("  Breaking inner loop")
            jooji
        }
    }
    bandhig("Outer loop continues")
}

// Valid example of proper function return
hawl add(a, b) {
    celi a + b
}
door result = add(5, 3)
bandhig("Function result: " + result)
